--- a/crates/hyper/RUSTSEC-2017-0002.toml
+++ b/crates/hyper/RUSTSEC-2017-0002.toml
@@ -1,7 +1,8 @@
 [advisory]
 id = "RUSTSEC-2017-0002"
 package = "hyper"
-patched_versions = [">= 0.10.2", "< 0.10.0, >= 0.9.18"]
+patched_versions = [">= 0.12.30"]
+uneffected_versions = ["<= 0.12.0"]
 date = "2017-01-23"
 url = "https://github.com/hyperium/hyper/wiki/Security-001"
 title = "headers containing newline characters can split messages"
